# WdI_M2021

./: .gitignore  CMakeLists.txt
14c6554e073329dd/: exercises-14.03.22.ipch
45d31287f5aee089/: exercises-11.04.22.ipch
include/cstd/: debug.h  function.h  graph.h  i_node.h  linked_list.h  list.h  queue.h  stack.h  tree.h
source/basics/: CMakeLists.txt  eratostenes.c  files.c  hello.c  horner.c  p1.c  polish_notation.c
source/data_structures/: CMakeLists.txt  list.c  queue.c  stack.c  test.c  tree.c
source/exercises/: CMakeLists.txt  exercises-08.12.21.c  exercises-11.04.22.c  exercises-14.03.22.c  exercises-15.12.21.c  exercises-25.04.22.c  exercises-30.05.22.c  newton.c  test.txt  zadanie0812_2.c  zadanie0812_3.c  zadanie1512_1.c  zadanie1512_2.c  zadanie1512_3.c  zadanie2212_3  zadanie2212_3.c
source/graphs/: CMakeLists.txt  graph_d.c
source/sorting/: heap.c  heap_sort.c  merge_sort.c  quick_sort.c  sorts.c
